[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
solana-program = "=2.0.15"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }

[dev-dependencies]
mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
solana-sdk = "=2.0.15"
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
five8_const = "0.1.3"
five8 = "0.2.1"